--- a/index.html
+++ b/index.html
@@ -2,58 +2,75 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Postkort fra fremtiden</title>
+  <title>Postkort fra Fremtiden</title>
   <style>
-    body, html {
+    body {
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f6f8;
+      color: #111;
+    }
+    header {
+      background-image: url('Postkort_fra_fremtiden.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.7);
+    }
+    header h1 {
+      font-size: 2.8em;
+      margin: 0;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    ul {
+      list-style: none;
       padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      color: white;
     }
-
-    video.bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
+    li {
+      background: white;
+      margin-bottom: 15px;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
-    .container {
-      background-color: rgba(0, 0, 0, 0.5);
-      max-width: 800px;
-      margin: 80px auto;
-      padding: 40px;
-      border-radius: 20px;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 3em;
-      margin-bottom: 40px;
-    }
-
     a {
-      display: block;
-      color: white;
-      font-size: 1.2em;
-      text-decoration: underline;
-      margin: 12px 0;
+      text-decoration: none;
+      color: #0078D4;
+      font-weight: bold;
     }
-
-    a:hover {
-      color: #ffd;
-    }
-
-    .icon {
-      margin-right: 8px;
-    }
-
     footer {
-      text-align: center;
-      margin-top: 40px;
-      font-
+      text-align: right;
+      margin: 40px 20px;
+      font-size: 0.9em;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Postkort fra Fremtiden</h1>
+  </header>
+  <main>
+    <h2>Disruptive Perspektiver og Nyhetsbrev</h2>
+    <ul>
+      <li><a href="AI Infra - Disruptive Perspektiver No.1.pdf" target="_blank">AI Infra – Disruptive Perspektiver No.1</a></li>
+      <li><a href="Wealth of Nations - Disruptive Perspektiver No.2.pdf" target="_blank">Wealth of Nations – Disruptive Perspektiver No.2</a></li>
+      <li><a href="Digital Føydaløkonomi - Disruptive Perspektiver No.3.pdf" target="_blank">Digital Føydaløkonomi – Disruptive Perspektiver No.3</a></li>
+      <li><a href="Digitale Agenter - Disruptive Perspektiver No. 4.pdf" target="_blank">Digitale Agenter – Disruptive Perspektiver No.4</a></li>
+      <li><a href="Jakten på Metaverse - Disruptive Perspektiver No.5.pdf" target="_blank">Jakten på Metaverse – Disruptive Perspektiver No.5</a></li>
+      <li><a href="Kina 2.0 - Disruptive Perspektiver no.6.pdf" target="_blank">Kina 2.0 – Disruptive Perspektiver No.6</a></li>
+    </ul>
+  </main>
+  <footer>
+    Kontakt: <a href="mailto:Leo.Rundgren.Olsen@dnb.no">Leo.Rundgren.Olsen@dnb.no</a>
+  </footer>
+</body>
+</html>
