--- a/index.html
+++ b/index.html
@@ -2,64 +2,74 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8">
-  <title>Postkort fra Fremtiden</title>
+  <title>Disruptive Perspektiver</title>
   <style>
-    body {
+    body, html {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f6f8;
-      color: #111;
-    }
-    header {
-      background-image: url('Postkort_fra_fremtiden.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 400px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      padding: 0;
+      height: 100%;
+      font-family: sans-serif;
       color: white;
-      text-shadow: 1px 1px 5px rgba(0,0,0,0.7);
     }
-    header h1 {
-      font-size: 2.8em;
-      margin: 0;
+
+    .video-background {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
     }
-    main {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
+
+    .content {
+      position: relative;
+      z-index: 1;
+      padding: 50px;
+      background: rgba(0, 0, 0, 0.55);
+      min-height: 100vh;
     }
+
+    h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+
     ul {
       list-style: none;
       padding: 0;
     }
-    li {
-      background: white;
-      margin-bottom: 15px;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+
+    ul li {
+      margin-bottom: 10px;
     }
+
     a {
+      color: #00ffff;
       text-decoration: none;
-      color: #0078D4;
-      font-weight: bold;
     }
-    footer {
-      text-align: right;
-      margin: 40px 20px;
-      font-size: 0.9em;
-      color: #555;
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .contact {
+      margin-top: 40px;
+      font-size: 1.2em;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Postkort fra Fremtiden</h1>
-  </header>
-  <main>
-    <h2>Disruptive Perspektiver og Nyhetsbrev</h2>
+
+  <!-- 🎥 Bakgrunnsvideo -->
+  <video autoplay muted loop class="video-background">
+    <source src="bakgrunn.mp4" type="video/mp4">
+    Din nettleser støtter ikke video.
+  </video>
+
+  <div class="content">
+    <h1>Disruptive Perspektiver</h1>
+
     <ul>
       <li><a href="AI Infra - Disruptive Perspektiver No.1.pdf" target="_blank">AI Infra – Disruptive Perspektiver No.1</a></li>
       <li><a href="Wealth of Nations - Disruptive Perspektiver No.2.pdf" target="_blank">Wealth of Nations – Disruptive Perspektiver No.2</a></li>
@@ -68,9 +78,10 @@
       <li><a href="Jakten på Metaverse - Disruptive Perspektiver No.5.pdf" target="_blank">Jakten på Metaverse – Disruptive Perspektiver No.5</a></li>
       <li><a href="Kina 2.0 - Disruptive Perspektiver no.6.pdf" target="_blank">Kina 2.0 – Disruptive Perspektiver No.6</a></li>
     </ul>
-  </main>
-  <footer>
-    Kontakt: <a href="mailto:Leo.Rundgren.Olsen@dnb.no">Leo.Rundgren.Olsen@dnb.no</a>
-  </footer>
+
+    <div class="contact">
+      Kontakt: <a href="mailto:Leo.Rundgren.Olsen@dnb.no">Leo.Rundgren.Olsen@dnb.no</a>
+    </div>
+  </div>
 </body>
 </html>
