--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 <body>
 
   <video autoplay loop muted playsinline id="background-video">
-    <source src="bakgrunn.mp4" type="video/mp4">
-    Din nettleser støtter ikke video.
+    <source src="bakgrunn.mp4.mp4" type="video/mp4">
   </video>
 
   <div class="content">
